# fastapi-example

./: CHANGELOG.md  Dockerfile  Makefile  README.md  env.json  manage.py  policy.yml  pyproject.toml  tox.ini
app/: container.py
app/adapters/storage/: example.py
app/api/: handlers.py  main.py  schemas.py
app/api/routers/: schemas.py  system.py
app/api/v1/: factory.py  handlers.py
app/api/v1/routers/: example.py
app/db/: engine.py  session.py
app/models/: __init__.py
app/settings/: __init__.py  app.py  db.py  server.py
cicd/: docker-compose.tests.yml  run_tests_linters.sh
cli/: migrations.py  start.py
migrations/: alembic.ini  env.py  script.py.mako
tests/app/adapters/storage/: conftest.py  test_example.py
tests/app/api/v1/: conftest.py
tests/app/api/v1/routers/: test_example.py
utils/: base_dir.py  pyproject.py
utils/logger/: ex.py  settings.py  setup.py
utils/monitoring/: instrumentator.py
utils/settings/: json.py  validator.py
