[tool.poetry]
name = "python_fastapi_template"
version = "0.1.0"
description = "DWH Core Services FastAPI Template"
authors = ["dwh-python-dev <dwh-python-dev@tinkoff.ru>"]

[[tool.poetry.source]]
name = "nexus.tcsbank.ru"
url = "https://nexus.tcsbank.ru/repository/pypi-all/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
loguru = "^0.6.0"
sqlalchemy = "^1.4.39"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
toml = "^0.10.2"
click = "~8.1.2"
prometheus-fastapi-instrumentator = "5.8.1"
dependency-injector = "^4.39.1"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
pytest = "^7.1.2"
mypy = "^0.961"
pycodestyle = "^2.7.0"
sqlalchemy2-stubs = "^0.0.2a24"
types-toml = "^0.10.7"
black = "^22.6.0"
isort = "^5.10.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pydocstyle = "^6.1.1"
requests = "^2.28.1"
greenlet = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = [
    "app",
    "cicd",
    "cli",
    "functional_tests",
    "migrations",
    "tests",
    "utils",
]
skip = [".venv"]

[tool.pydocstyle]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "D302", # Use u”“” for Unicode docstrings
    "D407", # Missing dashed underline after section
    "D412", # No blank lines allowed between a section header and its content
]
# All dirs except versions
match-dir="^(?!versions).*"

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
allow_redefinition = true
strict_equality = true
disallow_incomplete_defs = true
no_implicit_optional = false
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = "migrations/versions"

[tool.pylint.master]
ignore = ["versions"]
jobs = 0  # Autodetecting CPU count
load-plugins = [
    "pylint.extensions.check_elif",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.for_any_all",
    "pylint.extensions.set_membership",
    "pylint.extensions.code_style",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.typing",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.docstyle",
    "pylint.extensions.comparetozero",
    "pylint.extensions.docparams",
    "pylint.extensions.emptystring",
    "pylint.extensions.mccabe",
]
suggestion-mode = true
extension-pkg-allow-list = ["pydantic", "dependency_injector"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "logging-fstring-interpolation",
    "logging-format-interpolation",
    "too-few-public-methods",
    "global-statement",
    "unnecessary-pass",
    "wildcard-import",
    "unused-wildcard-import",
    "no-member",
    "useless-param-doc",
    "useless-type-doc",
    "bad-mcs-classmethod-argument",
    "redefined-variable-type"
]

[tool.pylint.base]
good-names = ["i", "j", "k", "ex", "Run", "_", "e", "ns", "id", "T", "F"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata", "res", "result", "record"]
const-rgx = "(([A-z_][A-z0-9_]*)|(__.*__))$"

[tool.pylint.typecheck]
ignored-modules = ["alembic.context"]
ignored-classes = [
    "SQLObject",
    "optparse.Values",
    "thread._local",
    "_thread._local",
    "scoped_session"
]
ignored-parents = []
generated-members = ["REQUEST", "acl_users", "aq_parent"]
min-public-methods = 2

[tool.pylint.similarities]
ignore-imports = true

[tool.pylint.format]
max-module-lines = 2000

[tool.pylint.design]
min-public-methods = 2
exclude-too-few-public-methods = ""

[tool.coverage.run]
branch = true
omit = [
    "*venv\\*",
    "*/.venv/*",
    "*/.pycharm_helpers/*",
    "\\*helpers\\pycharm\\*",
    "/usr/share/python3/*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
]
partial_branches = [
    "pragma: no branch",
    "assert",
]
sort = "Cover"
